--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
             </li>
             <li>
               <a href="https://joshua-guerra21.github.io/Giftastic/">
-                <img src="img/img_1.jpg" alt="">
+                <img src="img\gif.gif" alt="">
                 <div class="text">
                   <h3>Giftastic App</h3>
                   <span>Visit Website</span>
@@ -95,6 +95,24 @@
                 <img src="img\train.jpg" alt="">
                 <div class="text">
                   <h3>Train Schedule</h3>
+                  <span>Visit Website</span>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="https://marybmichaels.github.io/project-1/">
+                <img src="img\SportsGuru.png" alt="">
+                <div class="text">
+                  <h3>Sports Guru</h3>
+                  <span>Visit Website</span>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="https://stark-wildwood-48724.herokuapp.com//">
+                <img src="img\daiquiri-600-480-hub.jpg" alt="">
+                <div class="text">
+                  <h3>Speak Easy</h3>
                   <span>Visit Website</span>
                 </div>
               </a>
